--- a/src/main/webapp/WEB-INF/views/twitters/create_tag.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/create_tag.jspx
@@ -5,6 +5,7 @@ xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:spring="http://www.springframewor
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:BigTagCreate id="fc_com_aeiou_bigbang_domain_BigTag" modelAttribute="bigTag" path="/twitters" render="${empty dependencies}" z="WgNMXxxUskORGvT8KaDenSDrbDI=">
+		<springform:hidden path="twitterID" value="${bigTag['twitterID']}"/> 
 		<springform:hidden path="twitterTitle" value="${bigTag['twitterTitle']}"/> 
 		<springform:hidden path="twitterContent" value="${bigTag['twitterContent']}"/>
 	
