--- a/src/main/webapp/WEB-INF/views/twitters/update.jspx
+++ b/src/main/webapp/WEB-INF/views/twitters/update.jspx
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" xmlns:jsp="http://java.sun.com/JSP/Page" version="2.0">
+<div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" 
+xmlns:jsp="http://java.sun.com/JSP/Page"  xmlns:springform="http://www.springframework.org/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <form:update id="fu_com_aeiou_bigbang_domain_Twitter" modelAttribute="twitter" path="/twitters" versionField="Version" z="+C8sDG9WJArHmp31s3+sy6qEalw=">
+		<springform:hidden path="addingTagFlag" id="addingTagFlag" name="addingTagFlag"/> 
         <field:input field="twtitle" id="c_com_aeiou_bigbang_domain_Twitter_twtitle" z="/V/4pAH3rrkLN/hSaWVYngTahFk="/>
         <field:editor field="twitent" height="300" id="c_com_aeiou_bigbang_domain_Twitter_twitent" required="true" z="user-managed"/>
         <!-- <field:datetime dateTimePattern="${twitter_twitdate_date_format}" field="twitDate" id="c_com_aeiou_bigbang_domain_Twitter_twitDate" required="true" z="RtLPo9UnRiHc0ybqItC4AqnRkw4="/>
