--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -79,7 +79,7 @@
 	        if(r){
 	          return
 	        }
-	        var%20i="http://en.sharethegoodones.com/contents?form",s=n.createElement("iframe");
+	        var%20i="http://localhost/bigbang/contents?form",s=n.createElement("iframe");
 	        s.id=t;
 	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
 	        +"&amp;title="+encodeURIComponent(n.title)
