unified the list_publisher.jsp and index.jsp(when displaying personal space) so they different in left end(go to personal space vs add contents) and sam on right end(friend/unfollow + leave message)

--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -46,67 +46,7 @@
       </a>
     </span>
     
-    <span class="new">
-    <c:if test="${empty maxPages and (not empty spaceOwner and fn:toLowerCase(spaceOwner) ne 'admin') and fn:toLowerCase(pageContext['request'].userPrincipal.name) ne fn:toLowerCase(spaceOwner)}">
-	  
-		  <spring:url value="/messages" var="create_message_url">
-	        <spring:param name="pReceiverName" value="${spaceOwner}"/>
-	      </spring:url>
-	      <a href="${create_message_url}">
-	        <spring:message code="writeMessageToSpaceOwner" arguments="${spaceOwner}" htmlEscape="false"/>
-	        <spring:url value="/resources/images/addmessage.png" var="message_img_url" />
-	        <spring:message arguments="${typeName}" code="global_menu_newmessage" var="add_message" htmlEscape="false" />
-	        <img alt="${fn:escapeXml(add_message)}" src="${message_img_url}" title="${fn:escapeXml(add_message)}" />
-	      </a>
-	  	  <c:out value=" || "/>
-    </c:if>
-       <spring:message code="AddOnNotice" htmlEscape="false"/>
-	   <a href='javascript:(
-	  function(e,t){
-	    var%20n=e.document;
-	    setTimeout(
-	      function(){
-	        function%20a(e){
-	          if(e.data==="destroy_bookmarklet"){
-	            var%20r=n.getElementById(t);
-	            if(r){
-	              n.body.removeChild(r);
-	              r=null
-	            }
-	          }
-	        }
-	        var%20t="DELI_bookmarklet_iframe",r=n.getElementById(t);
-	        if(r){
-	          return
-	        }
-	        var%20i="http://localhost/bigbang/contents?form",s=n.createElement("iframe");
-	        s.id=t;
-	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
-	        +"&amp;title="+encodeURIComponent(n.title)
-	        +"&amp;note="+encodeURIComponent(""+(e.getSelection?e.getSelection():n.getSelection?n.getSelection():n.selection.createRange().text))
-	        +"&amp;v=1.1";
-	        s.style.position="fixed";
-	        s.style.top="0";
-	        s.style.left="0";
-	        s.style.height="100%25";
-	        s.style.width="100%25";
-	        s.style.zIndex="16777270";
-	        s.style.border="none";
-	        s.style.visibility="hidden";
-	        s.onload=function(){
-	          this.style.visibility="visible"
-	        };
-	        n.body.appendChild(s);
-	        var%20o=e.addEventListener?"addEventListener":"attachEvent";
-	        var%20u=o=="attachEvent"?"onmessage":"message";
-	        e[o](u,a,false)
-	      },1
-	    )
-	  }
-	)(window)'><spring:message code="AddOnName" htmlEscape="false"/>
-	<spring:url value="/resources/images/addon.png" var="addon_img_url" />
-	<img src="${addon_img_url}"/></a>
-    </span>
+	<util:connectionUtils sharerName="${spaceOwner}" nothireable="${nothireable}" notfireable="${notfireable}"/>
   </div>
 
   <!-- display the blog of the user -->
