--- a/deploy/header_en.jspx
+++ b/deploy/header_en.jspx
@@ -1,5 +1,5 @@
 <div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions"
- xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" 
+ xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags"
  xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
@@ -23,8 +23,8 @@
 		  	  </a>
      		</c:otherwise>
      	</c:choose>
-  		
-  		
+
+
   		<c:out value=" || "/>
 	    <span>
 	      <spring:url value="/resources/j_spring_security_logout" var="logout"/>
@@ -40,9 +40,9 @@
           <c:set var="sec_name_msg">
             <spring:escapeBody javaScriptEscape="true">${name_msg}</spring:escapeBody>
           </c:set>
-          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_username", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_name_msg}", required : true}})); 
+          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_username", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_name_msg}", required : true}}));
         </script>
-        
+
        	<c:out value=" "/>
 	    <spring:message code="security_login_form_password" />
         <input id="j_password" type='password' name='j_password' style="width:60px; height:16px" onsubmit="setValues()"/>
@@ -50,9 +50,9 @@
           <c:set var="sec_pwd_msg">
             <spring:escapeBody javaScriptEscape="true">${pwd_msg}</spring:escapeBody>
           </c:set>
-          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_password", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_pwd_msg}", required : true}})); 
+          Spring.addDecoration(new Spring.ElementDecoration({elementId : "j_password", widgetType : "dijit.form.ValidationTextBox", widgetAttrs : {promptMessage: "${sec_pwd_msg}", required : true}}));
         </script>
-	        
+
       	<c:out value=" | "/>
         <script type="text/javascript">Spring.addDecoration(new Spring.ValidateAllDecoration({elementId:'proceed', event:'onclick'}));</script>
         <a onclick="setValues()" href="#" style="height:18px; vertical-align: top;">
@@ -64,14 +64,14 @@
 			form.submit();
 		  }
 	    </script>
-	    
+
       	<c:out value=" | "/>
         <input id="j_rememberme" name="j_rememberme" type="checkbox" style="vertical-align:top; height:14px;">
       	  <spring:message code="label_rememberme" htmlEscape="false" />
         </input>
-          
+
         <input id="proceed" type="submit" value="${fn:escapeXml(submit_label)}" style="vertical-align:bottom; width: 0px; height: 0px; border-bottom: 0px; border-top: 0px"/>
-        
+
         <script type="text/javascript">
 			dojo.addOnLoad(function() {
 			  dojo.require("dojo.cookie");
@@ -85,7 +85,7 @@
 			  }
 			})
         </script>
-        
+
         <c:out value=" || "/>
 		<spring:url value="/useraccounts?form" var="signupURL"/>
 		<a href="${signupURL}">
@@ -93,7 +93,7 @@
 		</a>
   	 </c:otherwise>
   </c:choose>
-  
+
   <span class="new">
     <spring:message code="AddOnNotice" htmlEscape="false" var="AddOnNotice"/>
 	<spring:url value="/resources/images/addon.png" var="addon_img_url" />
@@ -116,7 +116,7 @@
 	        if(r){
 	          return
 	        }
-	        var%20i="http://localhost/bigbang/contents?form",s=n.createElement("iframe");
+	        var%20i="http://en.sharethegoodones.com/contents?form",s=n.createElement("iframe");
 	        s.id=t;
 	        s.src=i+"&amp;url="+encodeURIComponent(e.location.href)
 	        +"&amp;title="+encodeURIComponent(n.title)
@@ -144,7 +144,7 @@
 	</a>
   <c:if test="${pageContext['request'].userPrincipal != null}">
       <c:out value=" || "/>
-      
+
       <spring:url value="/messages" var="messages_url"/>
       <a href="${messages_url}">
         <spring:url value="/resources/images/inbox.png" var="inbox_img_url" />
@@ -152,9 +152,9 @@
         <img alt="${fn:escapeXml(inboxManage_message)}" src="${inbox_img_url}" title="${fn:escapeXml(inboxManage_message)}" />
         <c:if test="${newMessageAmount > 0}">
         	[${newMessageAmount}]
-        </c:if> 
+        </c:if>
       </a>
-    
+
       <c:out value=" || "/>
       <spring:url value="/contents" var="contents_url"/>
       <a href="${contents_url}">
@@ -162,7 +162,7 @@
         <spring:message code="global_menu_contentsManage" var="contentsManage_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(contentsManage_message)}" src="${content_img_url}" title="${fn:escapeXml(contentsManage_message)}" />
       </a>
-      
+
       <spring:message code="doublespace"/>
       <spring:url value="/twitters" var="twitter_url"/>
       <a href="${twitter_url}">
@@ -170,7 +170,7 @@
         <spring:message code="global_menu_diaryManage" var="diaryManage_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(diaryManage_message)}" src="${diary_img_url}" title="${fn:escapeXml(diaryManage_message)}" />
       </a>
-      
+
       <spring:message code="doublespace"/>
       <spring:url value="/bigtags" var="bigtags_url"/>
       <a href="${bigtags_url}">
@@ -178,7 +178,7 @@
         <spring:message code="global_menu_tagsManage" var="tagsManage_message" htmlEscape="false" />
         <img alt="${fn:escapeXml(tagsManage_message)}" src="${tag_img_url}" title="${fn:escapeXml(tagsManage_message)}" />
       </a>
-      
+
       <spring:message code="doublespace"/>
       <spring:url value="/useraccounts/${currentUserID}" var="useraccounts_url">
 		<spring:param name="form"/>
@@ -201,7 +201,7 @@
         <img alt="${fn:escapeXml(reset_message)}" src="${reset_img_url}" title="${fn:escapeXml(reset_message)}" />
       </a>
   	  <!-- <util:theme/>  	   -->
-    </c:if>    
+    </c:if>
     </span>
   </form>
   <!-- Don't think this is meaningful to real user. so we leave it only in footer. <util:websiteSwitch/> -->
@@ -212,4 +212,4 @@
   <a href="${home}" name="${fn:escapeXml(home_label)}" title="${fn:escapeXml(home_label)}">
     <img src="${banner}" />
   </a>
-</div> 
+</div>
