--- a/src/main/webapp/WEB-INF/views/public/list_publisher_blog.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_publisher_blog.jspx
@@ -20,16 +20,12 @@
 		<util:connectionUtils sharerName="${publisher}" nothireable="${nothireable}" notfireable="${notfireable}"/>
 	</div>
 	<br/>
-	<!-- display the diary of the user  @NOTE: might not a good idea to display diary together with bookmarks. because when you are navigation twitter,
-	 the bookmar will also be effected. or you have to use more parameters..-->
-    <spring:message code="label_com_aeiou_bigbang_publicspace" var="publicspace" htmlEscape="false" />
-    <spring:message code="label_com_aeiou_bigbang_personalspace" var="personalspace" htmlEscape="false" />
-    <spring:message code="label_com_aeiou_bigbang_title" var="title" htmlEscape="false" />
-    <page:contentPane id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" label="${label}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
-        <table:contentlist data="${contents}" id="l_com_aeiou_bigbang_domain_Content" tagId="${tagId}" path="/contents" spaceOwner="${spaceOwner}" publisher="${publisher}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
-            <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" label="${title}" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_commonBigTag" property="commonBigTag" label="${publicspace}" maxLength="600" z="054H0l7u1U7D14UvHgTdwqh3sy4="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_uncommonBigTag" property="uncommonBigTag" label="${personalspace}" z="kDjPyZY8s59nSnA4ASrIOJGmeps="/>
-        </table:contentlist>
+    <spring:message code="label_com_aeiou_bigbang_domain_twitter_twtitle" var="title" htmlEscape="false" />
+    <spring:message code="label_com_aeiou_bigbang_domain_twitter_twittertag" var="category" htmlEscape="false" />
+    <page:contentPane id="pl_com_aeiou_bigbang_domain_Twitter" items="${blogs}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
+        <table:bloglist data="${blogs}" id="l_com_aeiou_bigbang_domain_Twitter" path="/twitters" spaceOwner="${spaceOwner}" publisher="${publisher}" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
+            <table:column id="c_com_aeiou_bigbang_domain_twitter_twtitle" property="twtitle" label="${title}" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
+            <table:column id="com_aeiou_bigbang_domain_twitter_twittertag" property="twittertag" label="${category}" z="kDjPyZY8s59nSnA4ASrIOJGmeps="/>
+        </table:bloglist>
     </page:contentPane>
 </div>
