--- a/src/main/webapp/styles/alt.css
+++ b/src/main/webapp/styles/alt.css
@@ -1,13 +1,13 @@
 /* main elements */
 
 body,div,td {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, Helvetica, sans-serif, SimSun;
 	font-size: 12px;
 	color: #666;
 }
 
 body {
-	background-color: #fff;
+	background-image: url(../images/bg/2.jpg);
 	text-align: center;
 }
 
@@ -84,17 +84,16 @@ body {
 }
 
 #footer {
-	background:#fff;
 	border:none;
-	margin-top:15px;
-	border-top:1px solid #999999;
+	margin-top:0px;
+	border-top:0px solid #999999;
 }
 
 .new {
 	float:right;
 }
 
-#footer a:link {color: #7db223;}
+#footer a:link {color: #aaaaaa;}
 
 .quicklinks {
 	clear:both;
@@ -182,7 +181,7 @@ h4 {
 }
 
 a {
-	text-decoration: underline;
+	text-decoration: none;
 	font-size: 12px;
 }
 
@@ -192,7 +191,6 @@ a img {
 }
 
 tr:nth-child(odd) {
-	background-color: #FFFFFF;
 }
 
 tr:nth-child(even) {
@@ -200,11 +198,12 @@ tr:nth-child(even) {
 }
 
 a:link {
-	color: #7db223;
+	color: #aaaaaa;
 }
 
 a:hover {
-	color: #456314;
+	color: #888888;
+	text-decoration: underline;
 }
 
 a:active {
@@ -227,7 +226,6 @@ ul li {
 /* table elements */
 
 table {
-	background: #EEEEEE;
 	margin: 2px 0 0 0;
 	border: 1px solid #BBBBBB;
 	border-collapse: collapse;
@@ -241,7 +239,7 @@ table table {
 }
 
 table td,table th {
-	padding: 2px;
+	padding: 0px;
 	border: 1px solid #CCCCCC;
 }
 
@@ -256,20 +254,24 @@ table th {
 	text-align: left;
 	font-weight: bold;
 	color: #FFF;
-	background: #999;
+	background: #EEEEEE;
 }
 
 table thead {
 	font-weight: bold;
-	font-style: italic;
+	#font-style: italic;
 	background-color: #BBBBBB;
 }
 
 table a:link {color: #303030;}
+table a:hover {
+	color: #741717;
+	text-decoration: underline;
+}
 
 .utilbox {width: 18px;}
 .namebox {
-	width: 50px;
+	width: 80px;
 	text-align: right;
 }
 
@@ -383,8 +385,14 @@ fieldset th {
 	border: 0px;
 }
 .nopaddingleft{
+	padding-top: 0px;
 	padding-left: 0px;
+	padding-right: 1px;
+	padding-buttom: 0px;
 }
 .nopaddingright{
+	padding-top: 0px;
+	padding-left: 1px;
 	padding-right: 0px;
+	padding-buttom: 0px;
 }
