added reset to default function set the unread message notice to red color. when only friends have blog, also display.

--- a/src/main/webapp/WEB-INF/views/customizes/tagsDisplay.jspx
+++ b/src/main/webapp/WEB-INF/views/customizes/tagsDisplay.jspx
@@ -10,10 +10,7 @@
   <spring:url value="/customizes" var="updateTagsToShowUrl">
     <spring:param name="updateTagsToShow" value="reset"/>
   </spring:url>
- <!--  <spring:url value="/public" var="updateTagsToShowUrl">
-		<spring:param name="relayouttype" value="reset"/>
-		<spring:param name="tagId" value="-1"/>
-  </spring:url>   -->
+
   <form:form id="cutomize_tags_to_show" action="${updateTagsToShowUrl}" method="PUT" versionField="Version" z="K80yvgKJBAXcTEVVMxwBFLitqaI=">
     <spring:message code="label_com_aeiou_bigbang_domain_customizes_commonTag" var="commonTagsText"/>
     <util:panel id="commonTags" title="${commonTagsText}" openPane="${true}"> 
@@ -45,6 +42,16 @@
     	<spring:message code="button_save" var="save_button" htmlEscape="false" />
     	<script type="text/javascript">Spring.addDecoration(new Spring.ValidateAllDecoration({elementId:'proceed', event:'onclick'}));</script>
     	<input id="proceed" type="submit" value="${fn:escapeXml(save_button)}" />
+    	
+        <c:out value=" || " />
+        
+        <spring:url value="/public" var="reset_url">
+			<spring:param name="relayouttype" value="reset"/>
+			<spring:param name="tagId" value="-1"/>
+	    </spring:url>
+        <a href="${reset_url}">
+          <spring:message code="global_menu_resetView" htmlEscape="false" />
+        </a>
     </div>
     <br/>
   </form:form>
