--- a/src/main/webapp/WEB-INF/views/public/index.jspx
+++ b/src/main/webapp/WEB-INF/views/public/index.jspx
@@ -50,7 +50,7 @@
   </div>
 
   <!-- display the blog of the user -->
-  <c:if test="${not empty twitterLeft}">
+  <c:if test="${not empty twitterLeft || not empty twitterRight}">
 	  <table class="tWireless" style="margin-bottom: 0px"><tr>
 	  	<c:if test="${not empty twitterLeft}">
 		  	<td class="tWireless nopaddingleft" valign="top">
