--- a/src/main/webapp/WEB-INF/layouts/simple.jspx
+++ b/src/main/webapp/WEB-INF/layouts/simple.jspx
@@ -15,8 +15,7 @@
 		<title><spring:message code="welcome_h3"/></title>
 	</head>
 	
-    <spring:url value="/resources/images/bg/1.jpg" var="bg_img_url" />
-  	<body class="tundra spring" background="${bg_img_url}">
+  	<body class="tundra spring">
    		<div id="wrapper">
 		    <tiles:insertAttribute name="header" ignore="true" />
 		    <tiles:insertAttribute name="menu" ignore="true" />   
