--- a/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list_detail_twitter.jspx
@@ -48,14 +48,14 @@
 		    </form:BigLoginNotice>
 	  	 </c:otherwise>
 	</c:choose>
-	
+
 	<spring:url value="/remarks" var="RefreshTimeSettingForm_url">
-        <spring:param name="refreshTime" value="${refreshTime}"/>
+        <spring:param name="refreshTime" value="${#refreshTime}"/>
         <spring:param name="refreshTwitterid" value="${twitter['id']}"/>
     </spring:url>
 	<form id="RefreshTimeSettingForm" action="${RefreshTimeSettingForm_url}"  method="POST" style="text-align: left">
 	    <spring:message code="refresh_time" htmlEscape="false" />
-	    <input type='text' name='refreshTime' value="${refresh_time}" style="width:20px;height:12px" />
+	    <input type='text' id="refreshTime" name="refreshTime" value="${refresh_time}" style="width:20px;height:12px" />
 	    <spring:message code="second" htmlEscape="false" />
     	<spring:message code="relayout_submit" var="submit" htmlEscape="false" />
     	<button id="proceed" type="submit" value="submit" title="${fn:escapeXml(submit)}" style="width:22px;height:16px;vertical-align: top; cursor:pointer; border: 0px; ">
